# Eulinx

./: .gitignore  .prettierignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  components.json  eslint.config.js  eulinx.config.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  run-tauri.bat  run.bat  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  ui-ux-preview-soft.html  vite.config.js  vite.config.ts  vitest.config.ts
Docs/: Implementation-Flow.md  Minimal_Clean.md
Docs/00-introduction/: FAQ.md  (+12 more)
e2e/: smoke.spec.ts
scripts/: check.ps1  dev.ps1  generate-icons.mjs  generate-tokens.ts  migrate-tokens.cjs  run-tauri.mjs  test-all.ps1
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: db.rs  dialog.rs  event_log_cmd.rs  fs.rs  git.rs  mod.rs  pty.rs  scheduler_cmd.rs  store.rs  window.rs  workflow_cmd.rs
src-tauri/src/event_log/: types.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/managers/: db_manager.rs  dialog_manager.rs  fs_manager.rs  mod.rs  pty_manager.rs  scheduler_manager.rs  secure_store_manager.rs  window_manager.rs  workflow_manager.rs
src-tauri/src/scheduler/: budgets.rs  concurrency.rs  dead_queue.rs  events.rs  fairness.rs  metrics.rs  mod.rs  queue.rs  rate_limiter.rs  readiness.rs  retries.rs  scheduler.rs  time_utils.rs  types.rs
src-tauri/src/state/: mod.rs
src-tauri/src/workflow/: engine.rs  graph_mirror.rs  mod.rs  types.rs
(+1998 files in other folders)
