[package]
name = "eulinx"
version = "0.0.1"
description = "A local-first AI operating system for knowledge work"
authors = ["Eulinx"]
edition = "2021"

[lib]
name = "eulinx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
notify = "6.1.1"

crossbeam-channel = "0.5"
indexmap = { version = "2", features = ["serde"] }
priority-queue = "2"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
